[gd_scene load_steps=10 format=3 uid="uid://fgydhvyk61dg"]

[ext_resource type="Script" path="res://scripts/start.gd" id="1_yghs3"]
[ext_resource type="FontFile" uid="uid://cfyq3y88px8p3" path="res://resources/04B_30__.TTF" id="2_6jcwx"]
[ext_resource type="AudioStream" uid="uid://ca0ynkwnp1hwy" path="res://assets/sfx/meow.mp3" id="4_tegb7"]
[ext_resource type="Texture2D" uid="uid://bxnbgra7vl5pa" path="res://assets/join_keys.png" id="5_8tp7r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6dduv"]
atlas = ExtResource("5_8tp7r")
region = Rect2(0, 0, 96, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6vyh"]
atlas = ExtResource("5_8tp7r")
region = Rect2(96, 0, 96, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7esj"]
atlas = ExtResource("5_8tp7r")
region = Rect2(192, 0, 96, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qti6"]
atlas = ExtResource("5_8tp7r")
region = Rect2(288, 0, 96, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nigqs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dduv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6vyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7esj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qti6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Start" type="Node2D"]
script = ExtResource("1_yghs3")

[node name="Title" type="Label" parent="."]
offset_left = 97.0
offset_top = 68.0
offset_right = 559.0
offset_bottom = 108.0
theme_override_fonts/font = ExtResource("2_6jcwx")
theme_override_font_sizes/font_size = 36
text = "Cats Squared Up"

[node name="Or" type="Label" parent="."]
offset_left = 285.0
offset_top = 238.0
offset_right = 353.0
offset_bottom = 278.0
theme_override_fonts/font = ExtResource("2_6jcwx")
theme_override_font_sizes/font_size = 26
text = "or"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinKeys" type="AnimatedSprite2D" parent="."]
position = Vector2(318, 254)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_nigqs")

[node name="Meow" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tegb7")

[node name="CatSelectTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="CatSelectTimer" to="." method="_on_cat_select_timer_timeout"]
